<resources>
    <string name="app_name">PersonalAccounting</string>
    <string name="clothing">Clothing</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="housing">Housing</string>
    <string name="other">Other</string>
    <string name="salary">Salary</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="budget_remain">Budget Remain</string>
    <string name="monthly_expense">Monthly Expense</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="budget">Budget</string>
    <string name="expense">Expense</string>
    <string name="remain">Remain</string>
    <string name="AddBillFailMessage">Fail to add</string>
    <string name="AddBillSuccessMessage">Successfully added</string>
    <string name="NoBillRecordMessage">No bill record</string>
    <string name="EmptyBillMessage">Amount cannot be empty</string>
    <string name="AmountEqualToZeroMessage">Amount cannot be zero</string>
    <string name="ChangeBudgetSettingSuccessMessage">Setting successfully changed</string>
    <string name="BillRecordNotFoundMessage">Cannot find bill record</string>
    <string name="bill_title">New Bill</string>
    <string name="billUpdate_title">Bill Detail</string>
    <string name="budgetSetting_title">Budget Setting</string>
    <string name="budgetSetting_description">(Check to remove)</string>
    <string name="expense_type">Expense Type</string>
    <string name="income_type">Income Type</string>
    <string name="income">Income</string>
    <string name="id">ID</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="remark">Remark</string>
    <string name="update_button">Update</string>
    <string name="delete_this_bill">Delete This Bill</string>
    <string name="DeleteBillFailMessage">Fail to delete bill</string>
    <string name="DeleteBillSuccessMessage">Bill successfully deleted</string>
    <string name="BillUpdateSuccessMessage">Bill successfully updated</string>
    <string name="BillUpdateFailMessage">Bill fail to update</string>
    <string name="addNewType">New Type</string>
    <string name="budget_title">Budget Summary</string>
    <string name="expense_summary">Expense Summary</string>
    <string name="income_summary">Income Summary</string>
    <string name="chart_title">Chart</string>
    <string name="year">Year</string>
    <string name="userSetting_title">User Setting</string>
    <string name="language">Language</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="setting_title">Setting</string>
    <string name="all">All</string>
    <string name="start_date">Start Date</string>
    <string name="last_active_date">Last Active Date</string>
    <string name="general">General</string>
    <string name="dark_mode">Dark</string>
    <string name="month">Month</string>
    <string name="not_available">N/A</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="expenseBudget">Expense Budget</string>
    <string name="incomeBudget">Income Budget</string>
    <string name="view_all_bill_record">Click to view bill record</string>
    <string name="feedback">Feedback</string>
    <string name="subject">Subject</string>
    <string name="EmailClientNotFoundMessage">There is no email client installed.</string>
    <string name="EmptyFeedbackMessage">Feedback cannot be empty</string>
    <string name="SendEmailMessage">Send email with ...</string>
    <string name="defaultEmailSubject">Feedback for PersonalAccouting</string>
    <string-array name="monthArray">
        <item>@string/jan</item>
        <item>@string/feb</item>
        <item>@string/mar</item>
        <item>@string/apr</item>
        <item>@string/may</item>
        <item>@string/jun</item>
        <item>@string/jul</item>
        <item>@string/aug</item>
        <item>@string/sep</item>
        <item>@string/oct</item>
        <item>@string/nov</item>
        <item>@string/dec</item>
    </string-array>
</resources>