<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/budget_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_title_height"
        android:gravity="center"
        android:text="@string/budget_title"
        android:textSize="@dimen/general_title_text_size"
        android:textColor="@color/main_view"
        android:layout_alignParentTop="true"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/budget_horizontal_margin"
        android:layout_marginVertical="@dimen/budget_vertical_margin"
        android:layout_gravity="center"
        android:layout_below="@id/budget_title"
        android:id="@+id/budget_mainView">

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="Budget"
                android:gravity="center"
                android:textSize="@dimen/budget_table_textSize"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/budget_table_textSize"
                android:gravity="center"
                android:id="@+id/budget_view"
                />

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:gravity="center"
                android:textSize="@dimen/budget_table_textSize"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/budget_expense_view"
                android:gravity="center"
                android:textSize="@dimen/budget_table_textSize"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remain"
                android:gravity="center"
                android:textSize="@dimen/budget_table_textSize"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/budget_remain_view"
                android:gravity="center"
                android:textSize="@dimen/budget_table_textSize"
                android:layout_weight="1"
                />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_column_height"
        android:gravity="center"
        android:text="@string/expense_summary"
        android:layout_below="@id/budget_mainView"
        android:id="@+id/budget_expenseTextView" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="false"
        android:stretchColumns="false"
        android:weightSum="4"
        android:layout_below="@id/budget_expenseTextView"
        android:id="@+id/budget_expense_items">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/type"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/budget"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/expense"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/remain"/>
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_scroll_view"
        android:layout_below="@id/budget_expense_items"
        android:id="@+id/budget_expense_detailView">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:id="@+id/budget_expense_detail"/>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_column_height"
        android:gravity="center"
        android:text="@string/income_summary"
        android:layout_below="@id/budget_expense_detailView"
        android:id="@+id/budget_incomeTextView"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="false"
        android:stretchColumns="false"
        android:weightSum="4"
        android:layout_below="@id/budget_incomeTextView"
        android:id="@+id/budget_income_items">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/type"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/budget"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/income"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/remain"/>
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_scroll_view"
        android:layout_below="@id/budget_income_items"
        android:minHeight="@dimen/general_scroll_view"
        android:layout_alignParentBottom="true">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:id="@+id/budget_income_detail"/>
    </ScrollView>

</RelativeLayout>