<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bill_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB">
    <TextView
        android:id="@+id/bill_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_title_height"
        android:text="@string/bill_title"
        android:gravity="center"
        android:textSize="@dimen/general_title_text_size"
        android:textColor="@color/main_view"/>

    <TableLayout
        android:layout_below="@id/bill_title"
        android:id="@+id/bill_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="false"
        android:collapseColumns="false"
        android:layout_above="@id/bottom_nav">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/general_column_height"
                android:text="@string/amount"
                android:gravity="center"
                android:layout_weight="2"/>
            <EditText
                android:id="@+id/amount_input"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/general_column_height"
                android:layout_weight="1"
                android:inputType="numberDecimal"/>
        </TableRow>
        <TableRow
            android:weightSum="6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bill_progressBar_height">
            <TextView
                android:layout_weight="2"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/bill_amountView"
                android:gravity="right"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/bill_budgetTextView"
                android:gravity="left"/>
            <ProgressBar
                android:layout_weight="2"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:id="@+id/bill_budgetProgressBar"/>
        </TableRow>
        <TableRow
            android:weightSum="6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bill_progressBar_height">
            <TextView
                android:layout_weight="2"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/bill_typeAmountView"
                android:gravity="right"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/bill_typeBudgetTextView"
                android:gravity="left"/>
            <ProgressBar
                android:layout_weight="2"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:id="@+id/bill_typeBudgetProgressBar"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/general_column_height"
                android:text="@string/income"
                android:gravity="center"
                android:layout_weight="2"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="@dimen/general_column_height"
                android:id="@+id/income_switch"
                android:layout_weight="1"
                />

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/general_column_height"
                android:text="@string/date"
                android:gravity="center"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/date_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/general_column_height"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/type"/>

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1" />
        </TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/general_column_height"
            android:text = "@string/remark"
            android:gravity="center"/>

        <EditText
            android:id ="@+id/remark_input"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/general_column_height"
            android:inputType="textShortMessage"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="375dp"
            android:layout_height="@dimen/main_budgetRemainButton_height"
            android:text="@string/submit_button"
            android:textSize="@dimen/bill_submitButton_text"
            style="@style/Dusk"/>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_nav_height"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom_nav"
        android:shrinkColumns="false"
        android:stretchColumns="false">
        <TableRow>
            <ImageButton
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:id="@+id/chart_button"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_insert_chart_24"
                style="@style/Dusk"/>
            <ImageButton
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:id="@+id/home_button"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_home_24"
                style="@style/Dusk"/>
            <ImageButton
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:id="@+id/setting_button"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_settings_24"
                style="@style/Dusk"/>

        </TableRow>
    </TableLayout>

</RelativeLayout>